--- a/Ch2/app/src/main/AndroidManifest.xml
+++ b/Ch2/app/src/main/AndroidManifest.xml
@@ -9,13 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FristActivity"
+        <activity android:name=".SecondActivity">
+            <intent-filter>
+                <action android:name="com.robincn.activitytest.ACTION_START"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+                <category android:name="com.robincn.activitytest.MY_CATEGORY"></category>
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".FristActivity"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"></action>
-                <category android:name="android.intent.category.LAUNCHER"></category>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            </activity>
+        </activity>
     </application>
 
 </manifest>
