--- a/Ch2/app/src/main/AndroidManifest.xml
+++ b/Ch2/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.robincn.activitytest">
 
     <application
@@ -9,11 +10,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ThirdActivity">
+            <intent-filter tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+                <data android:scheme="http"></data>
+            </intent-filter>
+        </activity>
         <activity android:name=".SecondActivity">
             <intent-filter>
-                <action android:name="com.robincn.activitytest.ACTION_START"></action>
-                <category android:name="android.intent.category.DEFAULT"></category>
-                <category android:name="com.robincn.activitytest.MY_CATEGORY"></category>
+                <action android:name="com.robincn.activitytest.ACTION_START" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="com.robincn.activitytest.MY_CATEGORY" />
             </intent-filter>
         </activity>
         <activity
