--- a/Ch2/app/src/main/AndroidManifest.xml
+++ b/Ch2/app/src/main/AndroidManifest.xml
@@ -17,16 +17,18 @@
                 <data android:scheme="http"></data>
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity">
+        <activity
+            android:name=".SecondActivity"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="com.robincn.activitytest.ACTION_START" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="com.robincn.activitytest.MY_CATEGORY" />
             </intent-filter>
         </activity>
         <activity
             android:name=".FristActivity"
+            android:launchMode="singleTask"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
