--- a/Ch5/BroadcastTest/app/src/main/AndroidManifest.xml
+++ b/Ch5/BroadcastTest/app/src/main/AndroidManifest.xml
@@ -17,6 +17,14 @@
             </intent-filter>
         </activity>
 
+        <receiver android:name=".MyBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.robincn.broadcaster.MY_BROADCAST" />
+            </intent-filter>
+        </receiver>
+
         <receiver
             android:name=".BootCompleteReceiver"
             android:enabled="true"
@@ -25,9 +33,10 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"></action>
             </intent-filter>
         </receiver>
+
     </application>
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
 
 </manifest>
