--- a/Ch5/BroadcastBestPractice/app/src/main/AndroidManifest.xml
+++ b/Ch5/BroadcastBestPractice/app/src/main/AndroidManifest.xml
@@ -9,14 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".BaseActivity"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="com.robincn.broadcastbestpractice.FORCE_OFFLINE"></action>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
