--- a/Ch5/BroadcastBestPractice/gradle/wrapper/gradle-wrapper.properties
+++ b/Ch5/BroadcastBestPractice/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu May 14 22:54:16 CST 2020
+#Fri Jan 15 19:05:52 CST 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.4-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
